--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,14 @@
 
     <!-- Progress view. -->
     <dimen name="progress_view_height">10dp</dimen>
+
+    <!--Text Size-->
+    <dimen name="text_size_12sp">12sp</dimen>
+    <dimen name="text_size_20sp">20sp</dimen>
+
+    <!--Margin-->
+    <dimen name="space_12dp">12dp</dimen>
+    <dimen name="space_16dp">16dp</dimen>
+    <dimen name="space_20dp">20dp</dimen>
+    <dimen name="space_24dp">24dp</dimen>
 </resources>
