--- a/app/src/main/res/values/str_feature_login.xml
+++ b/app/src/main/res/values/str_feature_login.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="login_screen_title">Login</string>
+    <string name="login_screen_title">Log in</string>
+    <string name="login_screen_btn_login">Log in</string>
+    <string name="login_screen_subdescription">Silahkan masuk dengan nomor HP kamu yang terdaftar</string>
+    <string name="login_screen_btn_register">Daftar</string>
+    <string name="login_screen_label_register">Belum punya akun?</string>
 </resources>
