--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
 
     <color name="translucentBackground">#ED000000</color>
     <color name="gray">#4F4F4F</color>
+    <color name="gray_3">#BDBDBD</color>
+    <color name="white">#FFFFFF</color>
 </resources>
